--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Base SEO -->
-    <title>RepoAudit.ai - AI Code Auditor & Security Scanner</title>
+    <title>SCAI - AI Code Auditor & Security Scanner</title>
     <meta name="description" content="The AI Senior Engineer that never sleeps. Automated code review, security scanning, and technical debt audit for GitHub repositories." />
     <meta name="keywords" content="AI code review, static analysis, github security scanner, technical debt audit, automated refactoring, code quality tool" />
-    <meta name="author" content="RepoAudit.ai" />
+    <meta name="author" content="SCAI" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://repoaudit.ai/" />
-    <meta property="og:title" content="RepoAudit.ai - Code. Perfected." />
+    <meta property="og:url" content="https://scai.co/" />
+    <meta property="og:title" content="SCAI - Code. Perfected." />
     <meta property="og:description" content="Instant security, performance, and architecture audits for any codebase. Stop shipping bugs." />
-    <meta property="og:image" content="https://repoaudit.ai/og-image.jpg" />
+    <meta property="og:image" content="https://scai.co/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://repoaudit.ai/" />
-    <meta property="twitter:title" content="RepoAudit.ai - Code. Perfected." />
+    <meta property="twitter:url" content="https://scai.co/" />
+    <meta property="twitter:title" content="SCAI - Code. Perfected." />
     <meta property="twitter:description" content="Instant security, performance, and architecture audits for any codebase. Stop shipping bugs." />
-    <meta property="twitter:image" content="https://repoaudit.ai/og-image.jpg" />
+    <meta property="twitter:image" content="https://scai.co/og-image.jpg" />
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -71,7 +71,7 @@
     {
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
-      "name": "RepoAudit.ai",
+      "name": "SCAI",
       "operatingSystem": "Cloud",
       "applicationCategory": "DeveloperApplication",
       "offers": {
